fix typo dan ukuran huruf

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                 <div class="container">
                     <div class="list-contents">
                         <div class="text-content">
-                            <h2 class="colored-text">EXPERIENCE HAWAI</h2>
-                            <h1>Get inpired</h1>
+                            <h3 class="colored-text">EXPERIENCE HAWAI</h3>
+                            <h2>Get inspired</h2>
                             <p>Discover the different side pf the city and see what Hawai has to offer</p>
                             <div class="btn-wrapper">
                                 <a href="#" class="link"><button class="btn prev"><span class="fa fa-arrow-left"></span></button></a>
@@ -61,7 +61,7 @@
                         <div class="img-content">
                             <img class="thumnail" src="img/surfing-top.jpg" alt="">
                             <div class="img-description">
-                                <h2>Surving in the sea</h2>
+                                <h2>Surfing in the sea</h2>
                                 <h3>Discover more</h3><span class="fa fa-chevron-right"></span>
                             </div>
                         </div>
