--- a/index.html
+++ b/index.html
@@ -14,10 +14,14 @@
         <header>
             <div class="container">
                 <div class="header-left">
-                    <p>A</p>
+                    <img class="logo" src="img/header-pngegg.png">
                 </div>
+		        <span class="fa fa-bars menu-icon"></span>
                 <div class="header-right">
-                    <p>B</p>
+					<a href="#">Place</a>
+					<a href="#">Pricing</a>
+					<a href="#">Navigate</a>
+					<a href="#">Contact</a>
                 </div>
             </div>
 
