--- a/index.html
+++ b/index.html
@@ -256,10 +256,33 @@
       </div>
         <footer>
             <div class="container">
-                <h1>footer</h1>
-
-
-
+                <img src="img/pngegg.png">
+				<div class="footer">
+					<div class="footer-list">
+    					<ul1>About
+    						<li>About us</li>
+    						<li>Contact</li>
+    						<li>Press</li>
+    					</ul1>
+    					<ul2>Travel Tips
+    						<li>Start here</li>
+    						<li>Blog</li>
+    						<li>Destination</li>
+    					</ul2>
+    					<ul3>Resource
+    						<li>Categories</li>
+    						<li>City guides</li>
+    						<li>Travel resource</li>
+    					</ul3>
+					</div>
+					<div class="footer-right">
+					<h2>Follow Us:</h2>
+					<ul>
+					<li href="#" class="btn facebook"><span class="fab fa-facebook-f"></span>Facebook</li>
+					<li href="#" class="btn twitter"><span class="fab fa-twitter"></span>Twitter</li>
+					</ul>
+					</div>
+				</div>
             </div>
         </footer>
     </body>
