--- a/index.html
+++ b/index.html
@@ -283,7 +283,11 @@
 					</ul>
 					</div>
 				</div>
+
             </div>
+            <div class="clear">
+
+                </div>
         </footer>
     </body>
 </html>
